Templates/Stack-1.yaml
{
  "Resources": {
    "Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-0e975de049c8e3200",
        "InstanceType": "m5.large",
        "UserData": "IyEvYmluL2Jhc2gKClVOSVhfVVNFUj0iZWMyLXVzZXIiClVOSVhfVVNFUl9IT01FPSIvaG9tZS9lYzItdXNlciIKRU5WSVJPTk1FTlRfUEFUSD0iL2hvbWUvZWMyLXVzZXIvZW52aXJvbm1lbnQiClVOSVhfR1JPVVA9JChpZCAtZyAtbiAiJFVOSVhfVVNFUiIpCgojIEFwcGx5IHNlY3VyaXR5IHBhdGNoZXMKT1BFUkFUSU5HX1NZU1RFTT0kKGF3ayAtRj0gJyQxPT0iSUQiIHsgcHJpbnQgJDIgO30nIC9ldGMvb3MtcmVsZWFzZSB8IHNlZCAtZSAncy9eIi8vJyAtZSAncy8iJC8vJykKaWYgWyAiJE9QRVJBVElOR19TWVNURU0iID09ICJhbXpuIiBdOyB0aGVuCiAgICB5dW0gLXEgLXkgdXBkYXRlIC0tc2VjdXJpdHkgPiAvdG1wL2luaXQ [...]
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cloud9-aws-genai-workshop-357dd2962e6445feabc0dac3cea9e11a"
          }
        ],
        "NetworkInterfaces": [
          {
            "AssociatePublicIpAddress": true,
            "DeviceIndex": 0,
            "SubnetId": "subnet-0078a78374558afbb",
            "GroupSet": [
              {
                "Ref": "InstanceSecurityGroup"
              }
            ],
            "DeleteOnTermination": true,
            "Description": "ENI for AWS Cloud9 environment aws-cloud9-aws-genai-workshop-357dd2962e6445feabc0dac3cea9e11a"
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/xvda",
            "Ebs": {
              "VolumeType": "gp3"
            }
          }
        ]
      }
    },
    "InstanceSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security group for AWS Cloud9 environment aws-cloud9-aws-genai-workshop-357dd2962e6445feabc0dac3cea9e11a",
        "VpcId": "vpc-05681487f417d9312",
        "SecurityGroupIngress": [
          {
            "FromPort": 22,
            "ToPort": 22,
            "IpProtocol": "tcp",
            "CidrIp": "34.218.119.32/27"
          },
          {
            "FromPort": 22,
            "ToPort": 22,
            "IpProtocol": "tcp",
            "CidrIp": "34.217.141.224/27"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "aws-cloud9-aws-genai-workshop-357dd2962e6445feabc0dac3cea9e11a"
          }
        ]
      }
    }
  }
}
